src/objects/Organisation_Document__c.object
<CustomObject>
    <fields>
        <fullName>Alternative_Test__c</fullName>
        <label>Alternative Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Type__c</fullName>
        <label>Attachment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospectus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Map/Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principle Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Job_Title__c</fullName>
        <label>Quote Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organisation__c</fullName>
        <label>Organisation</label>
        <referenceTo>Organisation__c</referenceTo>
        <relationshipLabel>Organisation Pictures/Quotes/Attachments</relationshipLabel>
        <relationshipName>Organisation_Documents1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Organisation Document</label>
    <nameField>
        <displayFormat>D-{0000000000}</displayFormat>
        <label>Organisation Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organisation Documents</pluralLabel>
    <recordTypes>
        <fullName>Attachment</fullName>
        <active>true</active>
        <label>Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Photo</fullName>
        <active>true</active>
        <label>Photo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote</fullName>
        <active>true</active>
        <label>Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>